--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="fundo"></div>
+
     <header>
         <div class="container">
             <div class="logo">
@@ -24,7 +24,7 @@
                         <img src="assets/img/menu.svg" alt="" width="40px" class="img-button">
                     </div>
                     <ul class="anime">
-                        <a href="">
+                        <a href="index.html">
                             <li> INÍCIO </li>
                         </a>
                         <a href="">
@@ -76,11 +76,14 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
@@ -91,11 +94,14 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
@@ -106,11 +112,14 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
@@ -121,11 +130,14 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
@@ -136,11 +148,14 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
@@ -151,17 +166,21 @@
                     <div class="row-center">
                         <h1> CONTA PLATINIUM </h1>
                     </div>
+                    <h4> 250 R$ </h4>
                     <div class="row-center">
-                        <h2> 200 <strong>R$</strong></h2>
+                        <h2> 200 R$</h2>
                     </div>
                     <div class="row-center">
-                        <button class="see-more"> VER MAIS </button>
+                        <form action="product.html">
+                            <input type="submit" class="see-more" value="VER MAIS">
+                        </form>
                     </div>
                     <div class="row-right">
                         <h3>PS4</h3>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <div class="space-100"></div>
