Adicionando página de cadastro

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="">
                             <li> DÚVIDAS </li>
                         </a>
-                        <a href="">
+                        <a href="cadastro.html">
                             <li> MINHA CONTA </li>
                         </a>
                     </ul>
@@ -217,6 +217,6 @@
 
 
     <script type="text/javascript" src="assets/js/jquery.js"></script>
-    <script type="text/javascript" src="assets/js/scriptHome.js"></script>
+    <script type="text/javascript" src="assets/js/scriptMenu.js"></script>
 </body>
 </html>
