--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
                         <a href="">
                             <li> DÚVIDAS </li>
                         </a>
-                        <a href="">
+                        <a href="cadastro.html">
                             <li> MINHA CONTA </li>
                         </a>
                     </ul>
@@ -144,6 +144,6 @@
 
 
     <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/scriptHome.js"></script>
+    <script src="assets/js/scriptMenu.js"></script>
 </body>
 </html>
