--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="">
+                <a href="index.html">
                     <img src="assets/img/LogoCezar5.png" alt="" width="130px">
                 </a>
             </div>
